// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Component dark mode snapshots renders checkbox in dark mode 1`] = `
<div
  data-theme="dark"
  style="padding: 20px;"
>
  <div
    class="cic-checkbox-group"
  >
    <div
      class="cic-checkbox-wrapper"
    >
      <input
        class="cic-checkbox"
        id="test-checkbox-4"
        type="checkbox"
      />
      <label
        class="cic-checkbox-label"
        for="test-checkbox-4"
      >
        <span
          class="cic-checkbox-box"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkbox Component dark mode snapshots renders checkbox with description in dark mode 1`] = `
<div
  data-theme="dark"
  style="padding: 20px;"
>
  <div
    class="cic-checkbox-group"
  >
    <div
      class="cic-checkbox-wrapper"
    >
      <input
        class="cic-checkbox"
        id="test-checkbox-6"
        type="checkbox"
      />
      <label
        class="cic-checkbox-label"
        for="test-checkbox-6"
      >
        <span
          class="cic-checkbox-box"
        />
        <span
          class="cic-checkbox-text"
        >
          Test
        </span>
      </label>
    </div>
    <p
      class="cic-checkbox-description"
    >
      This is a test
    </p>
  </div>
</div>
`;

exports[`Checkbox Component dark mode snapshots renders checkbox with label in dark mode 1`] = `
<div
  data-theme="dark"
  style="padding: 20px;"
>
  <div
    class="cic-checkbox-group"
  >
    <div
      class="cic-checkbox-wrapper"
    >
      <input
        class="cic-checkbox"
        id="test-checkbox-5"
        type="checkbox"
      />
      <label
        class="cic-checkbox-label"
        for="test-checkbox-5"
      >
        <span
          class="cic-checkbox-box"
        />
        <span
          class="cic-checkbox-text"
        >
          Accept terms
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkbox Component light mode snapshots renders checkbox in light mode 1`] = `
<div
  data-theme="light"
  style="padding: 20px;"
>
  <div
    class="cic-checkbox-group"
  >
    <div
      class="cic-checkbox-wrapper"
    >
      <input
        class="cic-checkbox"
        id="test-checkbox-1"
        type="checkbox"
      />
      <label
        class="cic-checkbox-label"
        for="test-checkbox-1"
      >
        <span
          class="cic-checkbox-box"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkbox Component light mode snapshots renders checkbox with description in light mode 1`] = `
<div
  data-theme="light"
  style="padding: 20px;"
>
  <div
    class="cic-checkbox-group"
  >
    <div
      class="cic-checkbox-wrapper"
    >
      <input
        class="cic-checkbox"
        id="test-checkbox-3"
        type="checkbox"
      />
      <label
        class="cic-checkbox-label"
        for="test-checkbox-3"
      >
        <span
          class="cic-checkbox-box"
        />
        <span
          class="cic-checkbox-text"
        >
          Test
        </span>
      </label>
    </div>
    <p
      class="cic-checkbox-description"
    >
      This is a test
    </p>
  </div>
</div>
`;

exports[`Checkbox Component light mode snapshots renders checkbox with label in light mode 1`] = `
<div
  data-theme="light"
  style="padding: 20px;"
>
  <div
    class="cic-checkbox-group"
  >
    <div
      class="cic-checkbox-wrapper"
    >
      <input
        class="cic-checkbox"
        id="test-checkbox-2"
        type="checkbox"
      />
      <label
        class="cic-checkbox-label"
        for="test-checkbox-2"
      >
        <span
          class="cic-checkbox-box"
        />
        <span
          class="cic-checkbox-text"
        >
          Accept terms
        </span>
      </label>
    </div>
  </div>
</div>
`;
